[package]
name = "ec-cryptography"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num-bigint = { version="0.4.3", features=["rand"] }
sha256 = "1.1.4"
hex = "0.4.3"
ec-generic = "0.1.14"
